--- a/package.json
+++ b/package.json
@@ -84,8 +84,9 @@
     }
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.24.7",
+    "@babel/preset-typescript": "^7.25.7",
     "@lvce-editor/assert": "^1.3.0",
+    "@lvce-editor/command": "^1.1.0",
     "@lvce-editor/ipc": "^11.0.1",
     "@lvce-editor/json-rpc": "^4.1.0",
     "@lvce-editor/verror": "^1.4.0",
@@ -98,7 +99,7 @@
     "prettier": "^3.3.3",
     "rollup": "^4.17.2",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.3"
   },
   "prettier": {
     "semi": false,
