--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test:watch": "node --unhandled-rejections=warn --experimental-vm-modules ./node_modules/jest/bin/jest.js --watch",
     "type-check": "tsc",
     "build:watch": "nodemon",
-    "build": "node scripts/build.js"
+    "build": "node scripts/build.js",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -86,9 +87,8 @@
   "devDependencies": {
     "@babel/preset-typescript": "^7.26.0",
     "@lvce-editor/assert": "^1.3.0",
-    "@lvce-editor/command": "^1.2.0",
-    "@lvce-editor/ipc": "^13.7.0",
-    "@lvce-editor/json-rpc": "^5.4.0",
+    "@lvce-editor/rpc": "^1.21.0",
+    "@lvce-editor/rpc-registry": "^1.0.0",
     "@lvce-editor/verror": "^1.6.0",
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-node-resolve": "^16.0.0",
@@ -99,7 +99,7 @@
     "prettier": "^3.4.2",
     "rollup": "^4.17.2",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.3"
   },
   "prettier": {
     "semi": false,
